// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Row component matches the snapshot 1`] = `
.c1 {
  background: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

yoast-seo.g3[id="c0"] {
  content: "c1,";
}

<li
  className="c0 c1"
/>
`;

exports[`the RowResponsiveWrap component matches the snapshot 1`] = `
.c2 {
  background: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

yoast-seo.g3[id="c0"] {
  content: "c2,";
}

yoast-seo.g4[id="c1"] {
  content: "c3,";
}

@media screen and ( max-width:800px ) {
  .c3 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }

  .c3:first-child {
    margin-top: 24px;
  }

  .c3 > span::before {
    position: static;
    display: inline-block;
    padding-right: 0.5em;
    font-size: inherit;
  }

  .c3 > span {
    padding-left: 0;
  }
}

<li
  className="c0 c1 c2 c3"
/>
`;
